--- a/импорт должностей/import.csproj
+++ b/импорт должностей/import.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
-    <RootNamespace>импорт_должностей_жилсубсидий</RootNamespace>
+    <RootNamespace>импорт_должностей</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
